# check_pacman

./: CHANGELOG.md  README.md  check-pacman.cabal
app/: Main.hs
src/: CheckPacman.hs
src-test/: Main.hs
